--- a/common/app/assets/stylesheets/module/nav/_pop-up.scss
+++ b/common/app/assets/stylesheets/module/nav/_pop-up.scss
@@ -45,7 +45,7 @@
     }
 
     // Popup is not sticking to the edge of screen
-    @include mq(956px) {
+    @include mq(1152px) {
         border-right: 1px solid $darkMushroom;
     }
 
